--- a/src/main.html
+++ b/src/main.html
@@ -66,7 +66,7 @@
         </form>
     </div>
     <div class="body__infoContainer">
-        <output class="body__infoContainer-output"></output>
+        <output class="body__infoContainer-output"> item left</output>
         <p class="body__infoContainer-p-center">All</p>
         <p class="body__infoContainer-p-center">Active</p>
         <p class="body__infoContainer-p-center">Completed</p>
@@ -74,5 +74,6 @@
 
     </div>
     </div>
+
 </body>
 </html>
