--- a/src/main.html
+++ b/src/main.html
@@ -6,16 +6,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="../images/bg-desktop-dark.jpg" class="body__img">
+    <img src="../images/bg-desktop-dark.jpg" class="body__img" alt="desktop-dark-img">
     <div class="container">
     <div class="body__textIconContainer">
         <h1 class="body__textIconContainer-text">todo</h1>
-        <img src="../images/icon-sun.svg" class="body__textIconContainer-icon">
+        <img src="../images/icon-sun.svg" class="body__textIconContainer-icon" alt="sun-icon">
     </div>
     <div class="body__InputContainer">
         <form class="body__InputContainer-form" id="setText">
             <div class="body__InputContainer-form-div" id="radio">
-                <input type="button" form="radio" class="body__InputContainer-form-div-radioButton">
+                <div class="button-border-div"><input type="button" form="radio" class="body__InputContainer-form-div-radioButton"></div>
             </div>
             <input type="text" form="setText" class="body__InputContainer-form-input"
             placeholder="Create a new todo...">
@@ -25,42 +25,42 @@
         <!--outputContainer1-->
         <form class="body__outputContainer-form">
             <div class="body__outputContainer-form-div">
-                <input type="button" class="body__outputContainer-form-div-radioButton">
+                <div class="button-border-div"><input type="button" class="body__outputContainer-form-div-radioButton"></div>
             </div>
             <output class="body__outputContainer-form-output"></output>
         </form>
         <!--outputContainer2-->
         <form class="body__outputContainer-form">
             <div class="body__outputContainer-form-div">
-                <input type="button" class="body__outputContainer-form-div-radioButton">
+                <div class="button-border-div"><input type="button" class="body__outputContainer-form-div-radioButton"></div>
             </div>
             <output class="body__outputContainer-form-output"></output>
         </form>
         <!--outputContainer3-->
         <form class="body__outputContainer-form">
             <div class="body__outputContainer-form-div">
-                <input type="button" class="body__outputContainer-form-div-radioButton">
+                <div class="button-border-div"><input type="button" class="body__outputContainer-form-div-radioButton"></div>
             </div>
             <output class="body__outputContainer-form-output"></output>
         </form>
         <!--outputContainer4-->
         <form class="body__outputContainer-form">
             <div class="body__outputContainer-form-div">
-                <input type="button" class="body__outputContainer-form-div-radioButton">
+                <div class="button-border-div"><input type="button" class="body__outputContainer-form-div-radioButton"></div>
             </div>
             <output class="body__outputContainer-form-output"></output>
         </form>
         <!--outputContainer5-->
         <form class="body__outputContainer-form">
             <div class="body__outputContainer-form-div">
-                <input type="button" class="body__outputContainer-form-div-radioButton">
+                <div class="button-border-div"><input type="button" class="body__outputContainer-form-div-radioButton"></div>
             </div>
             <output class="body__outputContainer-form-output"></output>
         </form>
         <!--outputContainer6-->
         <form class="body__outputContainer-form">
             <div class="body__outputContainer-form-div">
-                <input type="button" class="body__outputContainer-form-div-radioButton">
+                <div class="button-border-div"><input type="button" class="body__outputContainer-form-div-radioButton"></div>
             </div>
             <output class="body__outputContainer-form-output"></output>
         </form>
