--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </form>
     </div>
     <div class="body__infoContainer" onmouseover="hover">
-        <div class="body__infoContainer-output"> item left</div>
+        <div class="body__infoContainer-output" id="infoContainerCount"><p id="counterDiv"></p></div>
         <p class="body__infoContainer-p-center" id="infoContainerAll">All</p>
         <p class="body__infoContainer-p-center" id="infoContainerActive">Active</p>
         <p class="body__infoContainer-p-center" id="infoContainerCompleted">Completed</p>
